--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+
+
+.ant-layout-header {
+  padding: 20px 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.carousel-item img {
+  width: 600px;
+  height: 450px;
+  object-fit: cover; /* Đảm bảo ảnh không bị biến dạng */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.ant-carousel .slick-dots li button {
+  background-color: gray; /* Màu sắc của dot */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.ant-carousel .slick-dots li.slick-active button {
+  background-color: black; /* Màu sắc của dot khi được chọn */
+}
+
+.carousel-item {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.image-container {
+  flex: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.carousel-image {
+  width: 500px;
+  height: 350px;
+}
+
+.info-container {
+  flex: 1;
+  padding-left: 20px;
 }
